# festutimetable-lib

./: .gitignore  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/festutimetable/: FestuApi.py  FestuDayTimetable.py  FestuTimetable.py  GroupIds.py  Lecture.py  Utils.py  __init__.py  core.py
tests/: test_basic.py  test_requests.py  test_service.py
