[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "festutimetable"
description = "Library for easy requests and use FESTU timetables"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["FESTU", "requests"]
authors = [
  {name = "Onii-Chan", email = "skobochki.ad@mail.ru"}
]
version = "0.5.0"

requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "Topic :: Internet",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2"
]

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*", "tests.*"]}}
package-dir = {"" = "src"}

[project.optional-dependencies]
test = ["pytest>=6.0"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]